add styling to details box

--- a/github-getter/index.html
+++ b/github-getter/index.html
@@ -21,7 +21,7 @@
                         <button class="btn" type="button" onClick="clearResults()">clear</button>
                     </div>
                 </form>
-            <div id="results-container" class="results">
+            <div id="results-container" class="results-container">
                 
             </div>
             <div class="loader">
